--- a/app-config.yaml
+++ b/app-config.yaml
@@ -128,3 +128,5 @@ kubernetes:
           skipMetricsLookup: true
           serviceAccountToken: ${K8S_MINIKUBE_TOKEN}
           dashboardUrl: http://127.0.0.1:64713 # url copied from running the command: minikube service kubernetes-dashboard -n kubernetes-dashboard
+permission:
+  enabled: true
