--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "resolutions": {
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "@azure/storage-blob": "12.18.0"
   },
   "prettier": "@spotify/prettier-config",
   "lint-staged": {
