--- a/app-config.yaml
+++ b/app-config.yaml
@@ -27,9 +27,16 @@ backend:
     credentials: true
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
+  # database:
+  #   client: better-sqlite3
+  #   connection: ':memory:'
   database:
-    client: better-sqlite3
-    connection: ':memory:'
+    client: pg
+    connection:
+      host: "localhost"
+      port: 5432
+      user: postgres
+      password: postgres
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
 integrations:
@@ -85,6 +92,10 @@ catalog:
     # Local example template
     - type: file
       target: ../../examples/template/template.yaml
+      rules:
+        - allow: [Template]
+    - type: file
+      target: ../../examples/template/template2.yaml
       rules:
         - allow: [Template]
 
