--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@backstage/backend-common": "^0.23.3",
     "@backstage/backend-defaults": "^0.4.0",
+    "@backstage/backend-plugin-api": "^0.7.0",
     "@backstage/backend-tasks": "^0.5.27",
     "@backstage/config": "^1.2.0",
     "@backstage/plugin-app-backend": "^0.3.71",
@@ -34,12 +35,20 @@
     "@backstage/plugin-permission-node": "^0.8.0",
     "@backstage/plugin-proxy-backend": "^0.5.3",
     "@backstage/plugin-scaffolder-backend": "^1.23.0",
+    "@backstage/plugin-scaffolder-node": "^0.4.8",
     "@backstage/plugin-search-backend": "^1.5.14",
     "@backstage/plugin-search-backend-module-catalog": "^0.1.28",
     "@backstage/plugin-search-backend-module-pg": "^0.5.32",
     "@backstage/plugin-search-backend-module-techdocs": "^0.1.27",
     "@backstage/plugin-search-backend-node": "^1.2.27",
     "@backstage/plugin-techdocs-backend": "^1.10.9",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.48.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.52.1",
+    "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-metrics": "^1.25.1",
+    "@opentelemetry/sdk-node": "^0.52.1",
+    "@opentelemetry/semantic-conventions": "^1.25.1",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
