--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,6 +16,7 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage"
   },
   "dependencies": {
+    "@aws-sdk/client-rds": "^3.624.0",
     "@backstage/backend-common": "^0.23.3",
     "@backstage/backend-defaults": "^0.4.0",
     "@backstage/backend-plugin-api": "^0.7.0",
@@ -51,6 +52,7 @@
     "@opentelemetry/semantic-conventions": "^1.25.1",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
+    "express": "^4.19.2",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3",
     "winston": "^3.2.1"
