--- a/app-config.yaml
+++ b/app-config.yaml
@@ -27,16 +27,16 @@ backend:
     credentials: true
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
-  # database:
-  #   client: better-sqlite3
-  #   connection: ':memory:'
   database:
-    client: pg
-    connection:
-      host: "localhost"
-      port: 5432
-      user: postgres
-      password: postgres
+    client: better-sqlite3
+    connection: ':memory:'
+  # database:
+  #   client: pg
+  #   connection:
+  #     host: "localhost"
+  #     port: 5432
+  #     user: postgres
+  #     password: postgres
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
 integrations:
